# Alconna-Notation

./: .gitignore  README.md  example.py  pyproject.toml
src/arclet/alconna/notation/: __init__.py  deserialize.py  serialize.py
