[tool.pdm]

[project]
name = "arclet-alconna-notation"
version = "0.1.0"
description = "Serializer & Deserializer of Alconna"
authors = [
    {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
]
dependencies = [
    "pyhocon>=0.3.60",
    "arclet-alconna>=1.7.7",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
